[package]
name = "keyless_voting"
description = "Aptos Keyless pepper service with voting"
version = "0.1.0"
# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Aptos internal crates (with workspace inheritance)
aptos-crypto = { workspace = true }
aptos-infallible = { workspace = true }
aptos-keyless-pepper-common = { workspace = true }
aptos-types = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-serialize = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bcs = { workspace = true }

# Additional dependencies your project needs
anyhow = { workspace = true } # Likely already in workspace
serde = { workspace = true } # Likely already in workspace
clap = { version = "4.3", features = ["derive"] }
oauth2 = "4.4"
url = "2.4"
rand = { workspace = true } # Likely already in workspace
sha2 = "0.10"
dotenv = "0.15.0"
webbrowser = "0.8"
thiserror = { workspace = true } # Likely already in workspace

# Local module
voting-protocol = { path = "./voting-protocol" }
